--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1031,8 +1031,7 @@ footer {
   }
   .navbar.styleNav {
     border-radius: 0 0 80% / 100% 0;
-    box-shadow: 0 0 65px #07485e inset, 0 0 20px #a1b4c0 inset, 0 0 5px #476281;
-    opacity: .9;
+    background: radial-gradient(ellipse 100% 200% at top left, transparent 49%, #07485e 50%);
   }
   .styleNav:after,
   .styleNav:before {
@@ -1040,6 +1039,27 @@ footer {
   }
   .navbar-collapse .navbar-nav {
     width: 100%;
+  }
+  .navbar-collapse .nav-item1 .link1 {
+    margin-left: 83%;
+  }
+  .navbar-collapse .nav-item2 .link2 {
+    margin-left: 78%;
+  }
+  .navbar-collapse .nav-item3 .link3 {
+    margin-left: 75%;
+  }
+  .navbar-collapse .nav-item4 .link4 {
+    margin-left: 58%;
+  }
+  .navbar-collapse .nav-item5 .link5 {
+    margin-left: 45%;
+  }
+  .navbar-collapse .nav-item6 .link6 {
+    margin-left: 30%;
+  }
+  .navbar-collapse .nav-item7 .link7 {
+    margin-left: 23%;
   }
   .navbar-collapse .nav-item .link {
     margin-left: 2%;
