--- a/public/css/sass/layouts/_mediaquery.scss
+++ b/public/css/sass/layouts/_mediaquery.scss
@@ -58,20 +58,20 @@
                 margin-left: 75%;
             }
             .nav-item4 .link4 {
-                margin-left: 58%;
+                margin-left: 60%;
             }
             .nav-item5 .link5 {
-                margin-left: 45%;
+                margin-left: 49%;
             }
             .nav-item6 .link6 {
-                margin-left: 30%;
+                margin-left: 35%;
             }
             .nav-item7 .link7 {
-                margin-left: 23%;
+                margin-left: 25%;
             }
-            .nav-item .link {
-                margin-left: 2%;
-            }
+            // .nav-item .link {
+            //     margin-left: 2%;
+            // }
             .nav-item {
                 letter-spacing: 1px;
             }
