--- a/public/css/sass/layouts/_mediaquery.scss
+++ b/public/css/sass/layouts/_mediaquery.scss
@@ -33,7 +33,7 @@
         .navbar.styleNav {
             border-radius: 0 0 80% / 100% 0;
             // box-shadow: $box-shadow-navbar-mobile;
-            // opacity: .9;
+            opacity: .9;
             // background: radial-gradient(circle at 0 0, transparent 30%, $color-profile2 50%) top left;
             // background-size: 100% 100%;
             // background-repeat: no-repeat;
