--- a/public/css/main.css
+++ b/public/css/main.css
@@ -243,6 +243,7 @@ h4, .logo {
 .navbar a.logo {
   content: url(../images/logoBlue.png);
   width: 140px;
+  transition: all .2s;
 }
 
 .navbar li a {
@@ -1025,14 +1026,14 @@ footer {
 }
 
 @media only screen and (max-width: 992px) {
-  .bgcolorMobilToggle {
-    background-image: linear-gradient(90deg, #011a27 0%, #01415f 25%, #02769B 50%);
-    transition: all 0.3s linear;
-  }
   .navbar.styleNav {
     border-radius: 0 0 80% / 100% 0;
     opacity: .9;
-    background: radial-gradient(ellipse 100% 200% at top left, transparent 49%, #07485e 50%);
+    background-image: linear-gradient(90deg, #011a27 0%, #01415f 25%, #02769B 50%);
+    background: radial-gradient(ellipse 70% 100% at 0px 50%, transparent 49%, #07485e 50%);
+  }
+  .navbar.styleNav .logo {
+    margin-left: 25%;
   }
   .styleNav:after,
   .styleNav:before {
@@ -1042,25 +1043,25 @@ footer {
     width: 100%;
   }
   .navbar-collapse .nav-item1 .link1 {
-    margin-left: 84%;
+    margin-left: 82%;
   }
   .navbar-collapse .nav-item2 .link2 {
-    margin-left: 80%;
+    margin-left: 77%;
   }
   .navbar-collapse .nav-item3 .link3 {
-    margin-left: 76%;
+    margin-left: 74%;
   }
   .navbar-collapse .nav-item4 .link4 {
-    margin-left: 61%;
+    margin-left: 58%;
   }
   .navbar-collapse .nav-item5 .link5 {
-    margin-left: 49%;
+    margin-left: 45%;
   }
   .navbar-collapse .nav-item6 .link6 {
-    margin-left: 35%;
+    margin-left: 30%;
   }
   .navbar-collapse .nav-item7 .link7 {
-    margin-left: 25%;
+    margin-left: 22%;
   }
   .navbar-collapse .nav-item {
     letter-spacing: 1px;
