--- a/public/css/sass/layouts/_mediaquery.scss
+++ b/public/css/sass/layouts/_mediaquery.scss
@@ -26,48 +26,52 @@
         // .logo {
         //     margin-left: 40%;
         // }
-        .bgcolorMobilToggle {
-            background-image: $color-bgNav;
-            transition: all 0.3s linear;
-        }
+        // .bgcolorMobilToggle {
+        //     background-image: $color-bgNav;
+        //     transition: all 0.3s linear;
+        // }
         .navbar.styleNav {
             border-radius: 0 0 80% / 100% 0;
             opacity: .9;
+            background-image: $color-bgNav;
+            // transition: all 0.3s linear;
             // box-shadow: $box-shadow-navbar-mobile;
             // background: radial-gradient(circle at 0 0, transparent 30%, $color-profile2 50%) top left;
             // background-size: 100% 100%;
             // background-repeat: no-repeat;
-            background: radial-gradient(ellipse 100% 200% at top left, transparent 49%, $color-profile2 50%);
+            background: radial-gradient(ellipse 70% 100% at 0px 50%, transparent 49%, $color-profile2 50%);
+            .logo {
+                margin-left: 25%;
+            }
         }
         .styleNav:after,
         .styleNav:before {
             display: none;
         }
         .navbar-collapse {
-            // margin-right: 1%;
             .navbar-nav {
                 width: 100%;
             }
             .nav-item1 .link1 {
-                margin-left: 84%;
+                margin-left: 82%;
             }
             .nav-item2 .link2 {
-                margin-left: 80%;
+                margin-left: 77%;
             }
             .nav-item3 .link3 {
-                margin-left: 76%;
+                margin-left: 74%;
             }
             .nav-item4 .link4 {
-                margin-left: 61%;
+                margin-left: 58%;
             }
             .nav-item5 .link5 {
-                margin-left: 49%;
+                margin-left: 45%;
             }
             .nav-item6 .link6 {
-                margin-left: 35%;
+                margin-left: 30%;
             }
             .nav-item7 .link7 {
-                margin-left: 25%;
+                margin-left: 22%;
             }
             // .nav-item .link {
             //     margin-left: 2%;
