--- a/public/css/sass/layouts/_portfolio.scss
+++ b/public/css/sass/layouts/_portfolio.scss
@@ -1,24 +1,24 @@
 /*--------------------------------------------------------------
 # Portfolio
 --------------------------------------------------------------*/
+
 .portfolio .portfolio-item {
     margin-bottom: 30px;
-  }
-  
-  
-    .portfolio #portfolio-menu {
+}
+
+.portfolio #portfolio-menu {
     padding: 0;
     margin: 0 auto 35px auto;
     list-style: none;
     text-align: center;
     background: $color-profile1;
-    border-radius: 50px; 
-box-shadow: 0px 3px 7px 1px rgba(0,0,0,0.5);
-  }
-  
-  .portfolio #portfolio-menu li {
+    border-radius: 50px;
+    box-shadow: 0px 3px 7px 1px rgba(0, 0, 0, 0.5);
+}
+
+.portfolio #portfolio-menu li {
     cursor: pointer;
-    display: inline-block;    
+    display: inline-block;
     font-size: 14px;
     font-weight: 600;
     line-height: 1;
@@ -26,68 +26,55 @@ box-shadow: 0px 3px 7px 1px rgba(0,0,0,0.5);
     color: $color-profile3;
     margin-bottom: 5px;
     transition: all 0.3s ease-in-out;
-  }
- 
-  .portfolio #portfolio-menu li:hover, .portfolio #portfolio-menu li.filter-active {
+}
+
+.portfolio #portfolio-menu li:hover,
+.portfolio #portfolio-menu li.filter-active {
     color: $color-profile2;
-  }
-  
-  .portfolio #portfolio-menu li:last-child {
+}
+
+.portfolio #portfolio-menu li:last-child {
     margin-right: 0;
-  }
-  
-  
+}
 
-.filter
-{
- 
-    
-    position:relative;
-    overflow:hidden;
-    a{
-      text-decoration: none;
-      color: $color-titles;
-      text-align: center;
-     
-      
-    }   
-
-        .cap1
-    {
-        position:absolute;
-        width:100%;
-        height:70%;
-        background:rgba($color-profile1, 0.8);
-        left:0px;
-        top:-100%;
-        padding:10px;        
+.filter {
+    position: relative;
+    overflow: hidden;
+    a {
+        text-decoration: none;
+        color: $color-titles;
+        text-align: center;
+    }
+    .cap1 {
+        position: absolute;
+        width: 100%;
+        height: 70%;
+        background: rgba($color-profile1, 0.8);
+        left: 0px;
+        top: -100%;
+        padding: 10px;
         transition: all .5s;
     }
-
-    .cap2
-    {
-        position:absolute;
-        width:100%;
-        height:30%;
-        background:rgba($color-profile2, 0.7);
-        left:0;
-        bottom:-100%;
-        padding:20px;
+    .cap2 {
+        position: absolute;
+        width: 100%;
+        height: 30%;
+        background: rgba($color-profile2, 0.7);
+        left: 0;
+        bottom: -100%;
+        padding: 20px;
         transition: all .5s;
-        a p{
-          color: $color-profile1;
+        a p {
+            color: $color-profile1;
         }
-      
     }
 }
 
 .filter:hover {
-    .cap1{
-        top:0px;
+    .cap1 {
+        top: 0px;
     }
-     .cap2{
-      bottom:0px;
-  }
-    
+    .cap2 {
+        bottom: 0px;
+    }
 }
-
