--- a/public/css/sass/layouts/_portfolio.scss
+++ b/public/css/sass/layouts/_portfolio.scss
@@ -70,6 +70,14 @@
     }
 }
 
+.topcap1 {
+    top: -100%;
+}
+
+.bottomcap2 {
+    bottom: -100%;
+}
+
 .filter:hover {
     .cap1 {
         top: 0px;
