--- a/public/css/sass/layouts/_skills.scss
+++ b/public/css/sass/layouts/_skills.scss
@@ -6,11 +6,11 @@
 .skills-bar-container {
     font-size: 20px;
     list-style: none;
-    margin-top: 30px;
-    width: 100%;
+    margin-bottom: 0;
+    width: 80%;
     li {
         position: relative;
-        width: 90%;
+        width: 80%;
         margin-right: auto;
         margin-left: auto;
         height: 50px;
