--- a/public/css/sass/bases/_reset.scss
+++ b/public/css/sass/bases/_reset.scss
@@ -5,7 +5,7 @@
     font-size: 100%;
     font: inherit;
     vertical-align: baseline;
-    // border: 1px solid red;s
+    // border: 1px solid red;
 }
 
 body {
