--- a/public/css/sass/layouts/_header.scss
+++ b/public/css/sass/layouts/_header.scss
@@ -58,32 +58,4 @@
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
 
-// parallax
-//parallax for image background profile
-// .parallax-wrapper {
-//     // overflow-y: hidden;
-//     background-image: url('../images/bgprofile.jpg');
-//     background-size: cover;
-//     background-repeat: no-repeat;
-//     background-position: center;
-//     height: 100vh;
-// }
-// _________________
-.parallax-wrapper {
-    overflow-y: hidden;
-}
-
-.parallax {
-    background-image: url('../images/bgprofile.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    height: 100vh;
-}
-
-.parallax {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-}
+// ____________________
